# kaminari_prime

./: .gitignore  CMakeCache.txt  CMakeLists.txt  FolderWidget.cpp  FolderWidget.h  InkwellBeta  NewFolderDialog.cpp  NewFolderDialog.h  NewItemDialog.cpp  NewItemDialog.h  README.md  SimpleQtApp  SketchPage.cpp  SketchPage.h  cmake_install.cmake  main.cpp  mainwindow.cpp  mainwindow.h  myresources.qrc  myresources.qrc.depends
.qt/: QtDeploySupport.cmake
InkwellBeta_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
InkwellBeta_autogen/EWIEGA46WW/: moc_FolderWidget.cpp.d  moc_NewFolderDialog.cpp.d  moc_NewItemDialog.cpp.d  moc_SketchPage.cpp.d  moc_mainwindow.cpp.d
SimpleQtApp_autogen/: deps  moc_predefs.h
SimpleQtApp_autogen/EWIEGA46WW/: moc_FolderWidget.cpp.d  moc_mainwindow.cpp.d
